atualização do index

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
         </div>
     </section>
     <section class="contato" id="contato">
-        <p class="info">Estou disponivel para novos projetos no moemento. Entre em contato comigo e marcamos
-            uma conversar.
+        <p class="info">Estou disponivel para novos projetos no momento. Entre em contato comigo e marcamos
+            uma conversa.
         </p>
         <ul class="contatos">
             <li><a href="">lenilsonliralucas@gmail.com</a></li>
