atualização da descrição

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <section class="container experiencias" id="experiencias" aria-label="experiências">
         <h2 class="subtitulo">experiências</h2>
         <div>
-            <p class="experiencias-texto">Sigo desenvolvendo pequenos projetos como o Bikcraft utilizando apenas <span>HTML, CSS</span> e <span>JavaScript</span>. Para aplicativos web como a rede social Dogs. Eu trabalhei no <span>UX</span> e <span>UI Design</span> do projeto.</p>
+            <p class="experiencias-texto">Desenvolvendo pequenos projetos como o Bikcraft utilizando apenas <span>HTML, CSS</span> e <span>JavaScript</span>. Para aplicativos web. Eu trabalhei no  desenvolvimento utilizando <span>UX</span> e <span>UI Design</span> no prototipo do projeto.
+            e as linguagem de marcação <span>HTML</span>e <span>CSS</span> para o desenvolvimento do site.</p>
             <div class="empresa">
                 <span class="empresa-ano">2045</span>
                 <h3 class="empresa-titulo">bickcraft</h3>
@@ -126,7 +127,7 @@
         <ul class="contatos">
             <li><a href="">lenilsonliralucas@gmail.com</a></li>
             <li><a href="">(83) 98622-9113</a></li>
-            <li><a href="">@lenilson1_</a></li>
+            <li><a href="https://www.linkedin.com/in/lenilson-lira-898157215/">@lenilson1_</a></li>
         </ul>
     </section>
     <footer>
