--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
     <section class="container experiencias" id="experiencias" aria-label="experiências">
         <h2 class="subtitulo">experiências</h2>
         <div>
-            <p class="experiencias-texto">Desenvolvendo pequenos projetos como o Bikcraft utilizando apenas <span>HTML, CSS</span> e <span>JavaScript</span>. Para aplicativos web. Eu trabalhei no  desenvolvimento utilizando <span>UX</span> e <span>UI Design</span> no prototipo do projeto.
-            e as linguagem de marcação <span>HTML</span>e <span>CSS</span> para o desenvolvimento do site.</p>
+            <p class="experiencias-texto">Sigo desenvolvendo pequenos projetos como o Bikcraft utilizando apenas <span>HTML, CSS</span> e <span>JavaScript</span>. Para aplicativos web. <br> Eu trabalhei no desenvolvimento utilizando <span>UX</span> e <span>UI Design</span> no projeto.</p>
             <div class="empresa">
-                <span class="empresa-ano">2045</span>
+                <span class="empresa-ano">2023</span>
                 <h3 class="empresa-titulo">bickcraft</h3>
                 <h3 class="empresa-cargo">Desenvolvedor júnior</h3>
                 <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
@@ -46,7 +45,7 @@
             </div>
 
             <div class="empresa">
-                <span class="empresa-ano">2021-2022</span>
+                <span class="empresa-ano">2021-2023</span>
                 <h3 class="empresa-titulo">Latam Airlines</h3>
                 <h3 class="empresa-cargo">Suporte de Atendimento</h3>
                 <p class="empresa-texto">Suporte de atendimento primeiramente a clientes, realizando os procedimentos e solucionando problemas, onde com esforços conseguir
