atualização do link

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <ul class="contatos">
             <li><a href="">lenilsonliralucas@gmail.com</a></li>
             <li><a href="">(83) 98622-9113</a></li>
-            <li><a href="https://www.linkedin.com/in/lenilson-lira-898157215/">@lenilson1_</a></li>
+            <li><a href="https://www.linkedin.com/in/lenilson-lira-898157215/" target="_blank">@lenilson1_</a></li>
         </ul>
     </section>
     <footer>
