--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
                     <li>Geo Localização</li>
               </ul>
             </div>
+
+            <div class="empresa">
+                <span class="empresa-ano">2023</span>
+                <h3 class="empresa-titulo">Fabrica de Software - Unipê</h3>
+                <h3 class="empresa-cargo">Desenvolvedor júnior</h3>
+                <p class="empresa-texto">Projeto Listagem entre a Fabrica de Software com parceria com a PM - PB, para realização de telas, cadastro de palavras com exibições de textos
+
+                    com JavaScript e  React.</p>
+               <ul class="empresa-habilidades">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>React</li>
+                    <li>MYSQL</li>
+              </ul>
+            </div>
         </div>
         
 
@@ -81,9 +97,9 @@
             <h2 class="subtitulo">formação</h2>
         </div>
         <div class="formação-right">
-          <p class="formação-info">Atualmente cursando o 3º periodo em Analise e desenvolvimento de sistemas (ADS) - Unipê. 
+          <p class="formação-info">Atualmente cursando o 4º periodo em Analise e desenvolvimento de sistemas (ADS) - Unipê. 
            Com foco no Desenvolvimento Web, faço cursos pela origamid, onde aprendi <span>HTML</span>,
-            <span>CSS</span>, <span> UI/UX Design</span>, e estou atualmente estudando o <span>JavaScript</span>.</p> 
+            <span>CSS</span>, <span> UI/UX Design</span>, <span>JavaScript</span>, e estou atualmente estudando o <span>React e Sass</span>.</p> 
             <div class="formação-cursos">
                 <div class="formação-estudo">
                     <p class="titulo">Tecnico</p>
@@ -109,6 +125,8 @@
                     <span class="cursos-horas">56h</span>
                     <span class="cursos-item">Front End para Iniciantes</span>
                     <span class="cursos-horas">72h</span>
+                    
+
                 </div>
             </div>
             <div class="idiomas">
